# chiaro

./: .gitignore  DESIGN.md  README.md  pyproject.toml
bg/datamodel-code-generator/: model.py  pyproject.toml  schema.json
bg/datamodel-code-generator/datamodel_code_generator/: __init__.py  __main__.py  format.py  imports.py  reference.py  types.py  util.py
bg/datamodel-code-generator/datamodel_code_generator/model/: __init__.py  base.py  enum.py  types.py
bg/datamodel-code-generator/datamodel_code_generator/model/pydantic/: __init__.py  base_model.py  types.py
bg/datamodel-code-generator/datamodel_code_generator/model/pydantic_v2/: __init__.py  base_model.py  imports.py  root_model.py  types.py
bg/datamodel-code-generator/datamodel_code_generator/parser/: __init__.py  base.py  jsonschema.py
docs/source/: api.rst  conf.py  contributing.md  index.md  installation.md  overview.md  usage.md  usage.py
src/chiaro/: __init__.py  core.py  generators.py  parsers.py  queries.py  registry.py  types.py
tests/: test_core.py  test_generators.py  test_parsers.py  test_queries.py  test_registry.py  test_types.py
